travis.yml updated

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: python
-cache: pip
-
 python:
-- 3.7.2
+  - "3.7.2"
 
 install:
-- pip install -r requirements.txt
+  - pip install -r requirements.txt
 
 script:
-python3 -m pytest -q tests/test_report.py
+  - python3 -m pytest -q tests/test_report.py
