--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: python
 python:
-  - "3.7.2"
+  - "3.7"
+
+virtualenv:
+  system_site_packages: true
 
 install:
   - pip install -r requirements.txt
 
 script:
-  - python3 -m pytest -q tests/test_report.py
+  - python -m pytest -q tests/test_report.py
