--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ virtualenv:
   system_site_packages: true
 
 install:
-  - pip install -r requirements.txt
+  - pip install -r pytest_example/requirements.txt
 
 script:
   - python -m pytest -q tests/test_report.py
