.yml: adding behavior to copy allure results

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,14 @@ python:
 
 install:
   - git clone --depth=50 --branch=master https://github.com/cariel27/pytest_example.git
+  - git clone --depth=50 --branch=master https://github.com/cariel27/allure_results.git
   - pip install -r pytest_example/requirements.txt
   - npm install -g allure-commandline
 
 script:
   - python -m pytest -q pytest_example/tests/test_report.py
+  - cp pytest_example/allure_results allure_results/results
+  - cd allure_results
+  - git add .
+  - git commit -m "updating allure results"
+  - git push
