--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,15 @@ python:
   - "3.6"
 
 install:
+  - npm i -g npm
   - npm install -g allure-commandline
   - git clone --depth=50 --branch=master https://github.com/cariel27/allure_results.git /home/travis/build/cariel27/allure_results
   - pip install -r requirements.txt
 
 script:
   - python -m pytest --alluredir=allure_results -q tests/test_report.py
-  - pwd
-  - cp allure_results /home/travis/build/cariel27/allure_results/results
+  - cp -r /home/travis/build/cariel27/pytest_example/allure_results/* /home/travis/build/cariel27/allure_results/results
+  - cd /home/travis/build/cariel27/allure_results/
   - git add .
   - git commit -m "updating allure results"
-  - git push origin master
+  - git push 'https://cariel27:P4ssw0rd!11@github.com/cariel27/allure_results.git/' master
