--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,13 @@ language: python
 python:
   - "3.6"
 
+before_install:
+- git clone --depth=50 --branch=master https://github.com/cariel27/allure_results.git /home/travis/build/cariel27/allure_results
+
 install:
   - npm i -g npm
   - npm install -g allure-commandline
-  - git clone --depth=50 --branch=master https://github.com/cariel27/allure_results.git /home/travis/build/cariel27/allure_results
-  - pip install -r requirements.txt
 
 script:
-  - python -m pytest --alluredir=allure_results -q tests/test_report.py
-  - cp -r /home/travis/build/cariel27/pytest_example/allure_results/* /home/travis/build/cariel27/allure_results/results
-  - cd /home/travis/build/cariel27/allure_results/
-  - git add .
-  - git commit -m "updating allure results"
-  - git push 'https://cariel27:P4ssw0rd!11@github.com/cariel27/allure_results.git/' master
+  - pip install -r requirements.txt && python -m pytest --alluredir=allure_results -q tests/test_report.py
+  - ./travis_script/update_allure_results.sh
