--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,4 @@ language: python
     - npm install -g allure-commandline
 
   script:
-    - pip install -r requirements.txt && python -m pytest --alluredir=allure_results -q tests/test_report.py
-    - ./travis_script/update_allure_results.sh
+    - pip install -r requirements.txt && python -m pytest --alluredir=allure_results -q tests/test_report.py && ./travis_script/update_allure_results.sh
